--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -7,24 +7,19 @@
     <meta name="description" content="Dave Sommerville">
     <meta name="theme-color" content="#ffffff">
     
-    <title></title>
+    <title>Python Dungeon Crawler</title>
     <link rel="icon" href="./src/img/favicon.png" type="image/x-icon">
-    
     <!-- External stylesheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    
     <!-- Local Stylesheets -->
-    <style>
-        p {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}" media="all">
+
     
-    <script src="{{ url_for('static', filename='js/game.js') }}" defer></script>
+    <script type="module" src="{{ url_for('static', filename='js/game.js') }}" defer></script>
 </head>
 <body>
     <header>
