--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -10,10 +10,9 @@
     <title>Python Dungeon Crawler</title>
     <link rel="icon" href="./src/img/favicon.png" type="image/x-icon">
     <!-- External stylesheets -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- Local Stylesheets -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" media="all">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}" media="all">
@@ -23,19 +22,23 @@
 </head>
 <body>
     <main id="game-container">
-        <div class="screen-container">
-            <div id="log-panel" style="height: 500px; overflow-y: scroll; border: 1px solid #ccc;">
+            <div id="log-panel" >
                 <p>Welcome to the dungeon...</p>
             </div>
-            <div id="menu-panel" style="background: #eee; padding: 10px; margin-top: 10px;">
-                <strong>Available Actions:</strong>
-                <ul id="options-list" style="padding:0;"></ul>
+            <div class="f-col control-panel">
+                <div id="error-panel"></div>
+                <div id="menu-panel">
+                    <strong>Available Actions:</strong>
+                    <ul id="options-list" ></ul>
+                </div>
             </div>
-        </div>
-            <div id="error-panel" style="color: red; min-height: 20px;"></div>
-            <input type="text" id="player-input" placeholder="Type action or number and press Enter...">
-            <button id="execute-btn" onclick="sendAction()">Execute</button>
-    </main>
+            <form id="action-form" class="flex">                
+                <input type="text" id="player-input" placeholder="Type action or number..." autocomplete="off">
+                <button type="submit">
+                    <i class="fa-solid fa-square-caret-right"></i>
+                </button>
+            </form>
+        </main>
     <footer>
         <!-- Footer content here -->
     </footer>
